# CleaningCompanyBackend

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  read.me  redis_client.py  requirements.txt  run.py  run_export_worker.py  run_migrations.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 05848a9b0a48_iventoryuser_and_inventory_tables_added.py  1f126651eb50_added_hints_table_n2.py  2bf681f4232e_init.py  4f29204b8f5a_initial_tables.py  50f41270510a_added_primaryjoin_task_to_hints_with_is_.py  68077c6ef98b_iventoryuser_added_report_id.py  6f30a8411703_hints_title_added.py  71b068d6b52e_initial_tables.py  90cb3be36582_fixind_user_table_id_is_int_now.py  9ec038b3203f_iventoryuser_added_report_id.py  aa79014b0817_user_table_fixing.py  d47a847ad49a_fixing.py  e56d0e40059a_init.py  ed66724aa32c_added_hints_table.py  f3a44c475a09_fixind_user_table_id_is_int_now_1.py
api/: custom_fastapi.py  main.py  scheduler.py
api/admin/: app.py
api/auth/: app.py  router.py  service.py
api/base/: exception_handlers.py  service.py
api/client/: app.py
api/depends/: lang.py  token.py  user.py
api/middlewares/: db.py
api/users/: app.py  (+2 more)
app/: main.py
db/: base.py  depends.py  session.py
locales/: de.json  ru.json  uk.json
loggers/: __init__.py  base.py  json.py  setup.py
redis_client/: client.py
schemas/: __init__.py  auth.py  base.py  user.py
utils/: api.py  benchmark.py  date_time.py  db.py  func.py  image_files.py  init_i18n.py  password.py  text.py
(+120 files in other folders)
